--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=sacco
+DB_DATABASE=cehurd
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_SOCKET=/Applications/MAMP/tmp/mysql/mysql.sock 
