--- a/.env
+++ b/.env
@@ -31,13 +31,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=host39.registrar-servers.com
+MAIL_PORT=465
+MAIL_USERNAME=info@8technologies.store
+MAIL_PASSWORD=Dev@Team@2
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=info@8technologies.store
+MAIL_FROM_NAME=8technologies
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
