--- a/.env
+++ b/.env
@@ -13,9 +13,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=cehurd
+DB_DATABASE=cehurd_org_dashboard
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
+DB_SOCKET=/Applications/MAMP/tmp/mysql/mysql.sock 
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
